cambios finales - paddings - fusion media querys

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="flex">
                 <img src="parived.jpg" alt="" class="img_proyecto">
                 <h3 class="title_proyecto">Parived</h3>
-                <p class="pproyecto">Un gurú de tercera bueno para nada. AHora es millonario y esposo de una modelo y
+                <p class="pproyecto">Un gurú de tercera bueno para nada. Ahora es millonario y esposo de una modelo y
                     conductora.</p>
             </div>
         </div>
